<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:background="#f1f1f1">

    <include
        android:id="@+id/title_all"
        layout="@layout/titlebar_upgrade" />

    <TextView
        android:id="@+id/tv_device_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="#666"
        android:textSize="14sp"
        android:text="@string/check_printer_info"
        android:layout_below="@+id/title_all"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
         />

    <EditText
        android:layout_below="@id/tv_device_name"
        android:id="@+id/et_id"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLines="1"
        android:maxLength="50"
        android:background="#fff"
        android:textSize="16sp"
        android:textColor="#292929"
        android:hint="@string/enter_device_num"
        android:textColorHint="#999999"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <EditText
        android:layout_below="@id/et_id"
        android:id="@+id/et_key"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLines="1"
        android:maxLength="50"
        android:background="#fff"
        android:textSize="16sp"
        android:textColor="#292929"
        android:hint="@string/enter_device_password"
        android:textColorHint="#999999"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <TextView
        android:id="@+id/tv_printer_remarks"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_key"
        android:gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:textColor="#666"
        android:textSize="14sp"
        android:text="@string/enter_printer_remarks_for_look" />

    <EditText
        android:id="@+id/et_newname"
        android:layout_below="@id/tv_printer_remarks"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:maxLines="1"
        android:maxLength="50"
        android:background="#fff"
        android:textSize="16sp"
        android:textColor="#292929"
        android:hint="@string/enter_printer_remarks"
        android:textColorHint="#999999"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

    <View
        android:layout_marginLeft="20dp"
        android:layout_below="@id/et_id"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#f2f2f2"/>

    <Button
        android:onClick="save"
        android:layout_below="@id/et_newname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/btn_add_printer"
        android:textSize="16sp"
        android:textColor="#fff"
        android:background="@drawable/start_pay_selector"/>
</com.zhy.autolayout.AutoRelativeLayout>
