<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="25px">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="恭喜您注册成功！"
        android:gravity="center"
        android:textSize="35px"
        android:padding="20px"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="完成几个以下步骤即可使用本POS机"
        android:gravity="center"
        android:textColor="#3F88CE"
        android:textSize="25px"/>
    <TextView
        android:layout_marginTop="40px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:textSize="25px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_success_step1"/>
    <TextView
        android:layout_marginTop="40px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:layout_width="match_parent"
        android:textSize="25px"
        android:layout_height="wrap_content"
        android:text="@string/regist_success_step2"/>
    <TextView
        android:layout_marginTop="40px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:textSize="25px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_success_step3"/>
    <TextView
        android:layout_marginTop="40px"
        android:paddingLeft="40px"
        android:paddingRight="40px"
        android:textSize="25px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regist_success_step4"/>
    <Button
        android:id="@+id/btn_regist_success"
        android:layout_width="400px"
        android:layout_height="80px"
        android:text="立即登录"
        android:textColor="#3F88CE"
        android:layout_marginTop="80px"
        android:background="@drawable/password_find_getcode_selector"/>
</com.zhy.autolayout.AutoLinearLayout>