<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoLinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/titlebar_upgrade"
        android:id="@+id/title"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:clipToPadding="false"
            android:fitsSystemWindows="true"
            android:background="#fff">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="66px"
                android:layout_marginLeft="34px"
                android:text="百度外卖账号绑定要求："
                android:textSize="24px"
                android:textColor="#666"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#aaa"/>
            <TextView
                android:layout_marginRight="34px"
                android:layout_marginTop="25px"
                android:layout_marginBottom="25px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34px"
                android:text="@string/bd_condition"
                android:lineSpacingMultiplier="1.5"
                android:textSize="24px"
                android:textColor="#333"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="30px"
                android:background="#f2f2f2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="66px"
                android:layout_marginLeft="34px"
                android:text="如果您符合要求请联系我们："
                android:textSize="24px"
                android:textColor="#666"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#aaa"/>
            <TextView
                android:id="@+id/tv_saler_info"
                android:layout_marginTop="25px"
                android:layout_marginBottom="25px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34px"
                android:text="@string/bd_waiter_info"
                android:textSize="24px"
                android:textColor="#333"
                android:lineSpacingMultiplier="1.5"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="30px"
                android:background="#f2f2f2"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="66px"
                android:layout_marginLeft="34px"
                android:text="如果您不符合以上要求："
                android:textSize="24px"
                android:textColor="#666"
                android:gravity="center_vertical"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#aaa"/>
            <TextView
                android:layout_marginRight="34px"
                android:layout_marginLeft="34px"
                android:layout_marginTop="25px"
                android:layout_marginBottom="25px"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bd_no_match"
                android:textSize="24px"
                android:textColor="#333"
                android:lineSpacingMultiplier="1.5"
                android:gravity="center_vertical"/>
            <!-- <View
                 android:layout_width="match_parent"
                 android:layout_height="30px"
                 android:background="#f2f2f2"/>-->

        </com.zhy.autolayout.AutoLinearLayout>
        <include layout="@layout/jiazai_layout"
            />
    </RelativeLayout>

</com.zhy.autolayout.AutoLinearLayout>

